# aruma_api

./: .gitignore  README.md  pyproject.toml
aruma_api/: app.py  schemas.py
fast_api/: app.py  schemas.py
tests/: conftest.py  test_app.py
